# pingora-gateway

./: Cargo.toml  README.md
examples/: wildcard.rs
src/: config.rs  main.rs
src/controller/: crd.rs  event.rs  mod.rs  start.rs  store.rs
src/pingora/: discovery.rs  mod.rs
src/pingora/app/: backend_refs.rs  http.rs  mod.rs
src/pingora/app/matcher/: gateway.rs  http_route.rs  http_route_rule.rs  http_route_rule_match.rs  mod.rs
tests/: pingora.yaml  server.yaml
tests/k8s/example/: default-pod-nginx.yaml
tests/k8s/gwc/: pingora-gateway-01.yaml  pingora-gatewayclass.yaml
